Fixes layout issues

--- a/src/scss/04-layouts/_quote.scss
+++ b/src/scss/04-layouts/_quote.scss
@@ -7,7 +7,7 @@
   justify-content: space-evenly;
 
   @include mx.for-size("tablet-landscape-up") {
-    padding: 4rem var(--content-padding);
+    padding: 0 var(--content-padding);
   }
   &--single {
     justify-content: center;
@@ -58,6 +58,7 @@
 
   &__title {
     --heading-size: #{mx.px-to-rem(20px)};
+    --heading-margin: 1rem 0 0;
   }
 
   &__bullets {
